# python_object_storage

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  PLAN.md  README.md  pyproject.toml
.github/workflows/: docker-publish.yml
src/: config.py  database.py  main.py
src/models/: bucket.py  multipart.py  object.py
src/routers/: buckets.py  multipart.py  objects.py
src/services/: storage.py  xml_builder.py
tests/: conftest.py  helpers.py
tests/s3_compat/: test_buckets.py  test_multipart.py  test_objects.py
tests/unit/: test_storage.py  test_xml_builder.py
